task#7049: Scrolls on detail page

--- a/app/components/layout/layout.scss
+++ b/app/components/layout/layout.scss
@@ -499,10 +499,10 @@
 
   &_stable {
     grid-template-rows: 100%;
-    height: auto;
-    max-height: none;
-    overflow-x: hidden;
-    overflow-y: auto;
+    // height: auto;
+    // max-height: none;
+    // overflow-x: hidden;
+    // overflow-y: auto;
 
     #{$b} {
       &__column {
@@ -531,8 +531,6 @@
             display: block;
             box-sizing: border-box;
             width: 100%;
-            height: auto;
-            max-height: none;
           }
         }
 
@@ -567,6 +565,10 @@
       display: flex;
       justify-content: center;
       align-items: flex-start;
+      height: auto;
+      max-height: none;
+      overflow-x: hidden;
+      overflow-y: auto;
 
       #{$b} {
         &__column {
