--- a/app/blocks/offer-description-panel/offer-description-panel.scss
+++ b/app/blocks/offer-description-panel/offer-description-panel.scss
@@ -144,5 +144,13 @@
     @include rule(height, (xl: 60px, xlg: 60, lg: 60, md: 60, sm: 60));
     @include rule(padding-right, (xl: 20px, xlg: 20, lg: 16, md: 20, sm: 20));
     @include rule(padding-left, (xl: 28px, xlg: 28, lg: 16, md: 16, sm: 20));
+
+    .map-in-fullview & {
+      pointer-events: none;
+    }
+
+    .layout-offer-active & {
+      pointer-events: auto;
+    }
   }
 }
