--- a/app/components/offer-description/offer-description.scss
+++ b/app/components/offer-description/offer-description.scss
@@ -9,6 +9,14 @@
     color: $nd-color-gray-text;
   }
 
+  .map-in-fullview & {
+    pointer-events: none;
+  }
+
+  .layout-offer-active & {
+    pointer-events: auto;
+  }
+
   &__subtitle {
     display: block;
     width: 100%;
