--- a/app/components/offer-description/offer-description.scss
+++ b/app/components/offer-description/offer-description.scss
@@ -9,13 +9,13 @@
     color: $nd-color-gray-text;
   }
 
-  .map-in-fullview & {
-    pointer-events: none;
-  }
+  // .map-in-fullview & {
+  //   pointer-events: none;
+  // }
 
-  .layout-offer-active & {
-    pointer-events: auto;
-  }
+  // .layout-offer-active & {
+  //   pointer-events: auto;
+  // }
 
   &__subtitle {
     display: block;
