task#7126: Offer count on main

--- a/app/styles/index.scss
+++ b/app/styles/index.scss
@@ -9,6 +9,7 @@
 @import '../blocks/box/box.scss';
 @import '../blocks/boxes/boxes.scss';
 @import '../blocks/burger/nd-burger.scss';
+@import '../blocks/loader/loader.scss';
 @import '../blocks/button/nd-button.scss';
 @import '../blocks/form-elements/check-button.scss';
 @import '../blocks/gallery/gallery.scss';
