task#7231: Calendar events

--- a/app/pages/newest/rental-summary/rental-summary-signup.pug
+++ b/app/pages/newest/rental-summary/rental-summary-signup.pug
@@ -1,4 +1,4 @@
-extends ../../layouts/redesign-default
+extends ../../../layouts/redesign-default
 
 block head
   - var pageTitle = 'Spacepool - Rental Summary'
@@ -22,7 +22,7 @@ block content
     .nd-container
       +e.column_form
         +nd-logo._rs.__logo.nd-hide-sm
-        +registration-form-summary({title: 'Login', login: true,}).__form
+        +registration-form-summary({title: 'Join Spacepool', registration: true, reg2subtitle: true}).__form
       +e.column_space
         +nd-link-icon('arrow5')._back.__back Back to Space
         +nd-space._rs
