--- a/app/pages/newest/rental-summary/rental-summary-signup-confirmed.pug
+++ b/app/pages/newest/rental-summary/rental-summary-signup-confirmed.pug
@@ -1,4 +1,4 @@
-extends ../../layouts/redesign-default
+extends ../../../layouts/redesign-default
 
 block head
   - var pageTitle = 'Spacepool - Rental Summary'
@@ -17,12 +17,12 @@ block header
   - var isNoUser = true
 
 block content
-  - var spaceData = {gallery: { images: ["assets/images/nd/nd-space-lead.jpg", "assets/images/space2.jpg", "assets/images/space3.jpg", "assets/images/space4.jpg", "assets/images/space7.jpg"], buttons: true, buttonsClass: "_bg-small"}, address: ["London", "Mayfare", "EC2A 4SD"], tube: "Liverpool Street", title: "House of Creative - 229 Shoreditch High Street", offers: [{box: "_blue", name: "MEETING ROOM", rows: [{ name: "Fixed desk 1st floor", price: "£ 860.00 per month"}]}]}
+  - var spaceData = {gallery: { images: ["assets/images/nd/nd-space-lead.jpg", "assets/images/space2.jpg", "assets/images/space3.jpg", "assets/images/space4.jpg", "assets/images/space7.jpg"], buttons: true, buttonsClass: "_bg-small nd-hide-sm"}, address: ["London", "Mayfare", "EC2A 4SD"], tube: "Liverpool Street", title: "House of Creative - 229 Shoreditch High Street", offers: [{box: "_red", name: "FIXED DESK", rows: [{ name: "Fixed desk 1st floor", price: "£ 860.00 per month"}]}]}
   +rs-grid
     .nd-container
       +e.column_form
         +nd-logo._rs.__logo.nd-hide-sm
-        +rs-form(true)
+        +registration-form-summary({title: 'Email confirmed', confirmemail: true}).__form
       +e.column_space
         +nd-link-icon('arrow5')._back.__back Back to Space
         +nd-space._rs
@@ -40,8 +40,8 @@ block content
               +nd-box._blue.__box
               +nd-box._green.__box
             +space-type._fz15._gray.__type.nd-hide-from-sm
-              +nd-box()._blue.__box_sz13
-              +e.name MEETING ROOM
+              +nd-box()._red.__box_sz13
+              +e.name FIXED DESK IN
             +e.title_fz28._fw500!=spaceData.title
             +offer-data(spaceData.offers).__offers.nd-hide-sm
 
