--- a/app/pages/newest/sitemap/redesign-sitemap.pug
+++ b/app/pages/newest/sitemap/redesign-sitemap.pug
@@ -38,6 +38,11 @@ block content
           //-     +nd-link(href="ha-space-viewings.html") Spacepool - Host Space - Viewings (ha-space-viewings.html)
           //-     +nd-link(href="ha-space-messages.html") Spacepool - Host Space - Messages (ha-space-messages.html)
           //-     +nd-link(href="ha-space-manager.html") Spacepool - Host Space - Manager (ha-space-manager.html)
+          +e.group
+            +e.head
+              +page-title December 2021 updates
+            +e.list
+              +nd-link(href="single-offer-dp.html") Spacepool - Single Offer Page Day Pass (single-offer-dp.html)
 
           +e.group
             +e.head
