--- a/app/blocks/offer-description-sidebar/offer-description-sidebar.pug
+++ b/app/blocks/offer-description-sidebar/offer-description-sidebar.pug
@@ -14,3 +14,19 @@ mixin offer-description-sidebar()
       | Or call&nbsp;
       +nd-link().__link(href="tel:+4402084322219") +44 020 8432 2219
       | &nbsp;to&nbsp;speak to&nbsp;our free Advisor
+
+mixin offer-description-sidebar-daypass()
+  +b.offer-description-sidebar&attributes(attributes)
+    +e.subtitle Exclusively on Spacepool
+    +e.payment
+      +e.SPAN.price £ 149
+      +e.SPAN.mesure  per month
+    +e.buttons
+      +nd-button._pad10.__button Book now
+      block
+    +nd-link-image('question')._underline._underline_blue.__question(href="#") Ask a question
+    +avatar('assets/images/nd/user-avatar-15.png')._sz50.__avatar
+    +e.info
+      | Or call&nbsp;
+      +nd-link().__link(href="tel:+4402084322219") +44 020 8432 2219
+      | &nbsp;to&nbsp;speak to&nbsp;our free Advisor
