--- a/app/pages/newest/sitemap/redesign-sitemap.pug
+++ b/app/pages/newest/sitemap/redesign-sitemap.pug
@@ -43,6 +43,7 @@ block content
               +page-title December 2021 updates
             +e.list
               +nd-link(href="single-offer-dp.html") Spacepool - Single Offer Page Day Pass (single-offer-dp.html)
+              +nd-link(href="search-v3-1.html") Spacepool - Search (search-v3-1.html)
 
           +e.group
             +e.head
